# SqliteWasmBlazor

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Directory.Build.props  Directory.Packages.props  EXPERIMENT-NATIVE-VFS.md  IMPLEMENTATION.md  INTEGRATION-STATUS.md  LICENSE  MESSAGEPACK_MIGRATION_SUMMARY.md  MIGRATIONS-HOWTO.md  MIGRATIONS-KNOWN-ISSUES.md  NuGet.config  OPFS-SAHPOOL.md  OPFS-SYNC-INVESTIGATION.md  QUICK-START.md  QUICKSTART.md  RACE-CONDITION-TEST-GUIDE.md  README.md  RELATIONSHIP_TESTS_SUMMARY.md  SETUP.md  SQLiteNET.Opfs.sln  SUMMARY.md  SYNCHRONOUS-FULL-CHANGES.md  SqliteWasmBlazor.sln  SqliteWasmBlazor.slnx  WEBAPPBASE-SQLITE-MIGRATION-ISSUES.md  deploy-ghpages.sh  publish-ghpages.sh
.github/: SETUP.md
DeltaRelay/: README.md  cryptosync-relay-gc.php  delta-relay.php
GeneratorRunner/: GeneratorRunner.csproj  Program.cs
SQLiteNET.Opfs/: ARCHITECTURE.md  README.md  SQLiteNET.Opfs.csproj
SQLiteNET.Opfs.Demo/: App.razor  INCREMENTAL-SYNC.md  JSIMPORT-ANALYSIS.md  JSIMPORT-WORKER-FIX.md  LOG-LEVELS-EXAMPLE.md  Program.cs  SQLiteNET.Opfs.Demo.csproj  _Imports.razor
SQLiteNET.Opfs.TestApp/: MIGRATIONS-TESTING.md  MIGRATIONS-TOOLING.md  Program.cs  SQLiteNET.Opfs.TestApp.csproj  _Imports.razor
SQLiteNET.Opfs.TestHost/: Program.cs  SQLiteNET.Opfs.TestHost.csproj
SQLiteNET.Opfs/Native/: CMakeLists.txt  README.md  build_sqlite.sh
SQLiteNET.Opfs/Native/src/: vfs_tracking.c  vfs_tracking.h
SqliteWasm.Data/: ARCHITECTURE.md  PROGRESS.md  SESSION_SUMMARY.md  SqliteWasm.Data.csproj  SqliteWasmCommand.cs  SqliteWasmConnection.cs  SqliteWasmDataReader.cs  SqliteWasmDatabaseCreator.cs  SqliteWasmDatabaseExtensions.cs  SqliteWasmDbContextOptionsExtensions.cs  SqliteWasmHistoryRepository.cs  SqliteWasmInterop.cs  SqliteWasmLogger.cs  SqliteWasmParameter.cs  SqliteWasmTransaction.cs  SqliteWasmWorkerBridge.cs  TypedRowData.cs
SqliteWasm.Data.Models/: SqliteWasm.Data.Models.csproj  TodoDbContext.cs  TodoDbContextFactory.cs
SqliteWasm.Data.Tests/: SqliteWasm.Data.Tests.csproj  SqliteWasmTestBase.cs  SqliteWasmTests.cs  TypedRowDataConverterTests.cs
SqliteWasmBlazor.AdminSeed/: Program.cs  SqliteWasmBlazor.AdminSeed.csproj
SqliteWasmBlazor.AdoNetSample/: Program.cs  README.md  SqliteWasmBlazor.AdoNetSample.csproj
SqliteWasmBlazor.Components/: SqliteWasmBlazor.Components.csproj  SqliteWasmComponentsOptions.cs
SqliteWasmBlazor.Crypto.Abstractions/: SqliteWasmBlazor.Crypto.Abstractions.csproj
SqliteWasmBlazor.Crypto.BouncyCastle/: SqliteWasmBlazor.Crypto.BouncyCastle.csproj
SqliteWasmBlazor.Demo/: Program.cs  (+6 more)
(+783 files in other folders)
